# hermes-mempalace-dreamer

./: ATTRIBUTION.md  CHANGELOG.md  README.md  README.pt-BR.md  ROADMAP.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: test.yml
docs/: DESIGN.md  USAGE.md
mempalace_dreaming/: __init__.py  cleanup.py  engine.py  setup.py
mempalace_dreaming/provider_bundle/: plugin.yaml  provider_init.py
skills/mempalace-dreaming/: SKILL.md
tests/: test_ci_workflow.py  test_cli.py  test_corpus_cleanup.py  test_cron_timezone.py  test_doctor.py  test_engine.py  test_integration_report.py  test_lean_check.py  test_lean_check_cli.py  test_packaging.py  test_plugin_contract.py  test_production_bootstrap.py  test_provider_install_methods.py  test_provider_sync_quality.py  test_repair_plan.py  test_runtime_home_resolution.py  test_setup.py  test_short_memory_cleanup_cron.py  test_verify_runtime.py  test_weekly_lean_check.py
