[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-mempalace-dreamer"
version = "1.0.0"
description = "MemPalace-first dreaming and memory hygiene bundle for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
